Bug 77810 - secret room demo crashes (?) Xserver, radeonsi 7970M, PRIME
Summary: secret room demo crashes (?) Xserver, radeonsi 7970M, PRIME
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-23 13:43 UTC by Christoph Haag
Modified: 2014-04-28 08:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
bt and bt full, but not complete debug symbols (5.68 KB, text/plain)
2014-04-24 08:05 UTC, Christoph Haag
no flags Details
full backtrace (7.10 KB, text/plain)
2014-04-24 08:31 UTC, Christoph Haag
no flags Details
Handle PRIME for source drawable as well (635 bytes, patch)
2014-04-24 09:01 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Christoph Haag 2014-04-23 13:43:15 UTC
xorg 1.15.1 stable, xf86-video-ati, glamor, mesa, etc. from relatively recent git.

Two GPUs in my laptop:

00:02.0 VGA compatible controller: Intel Corporation 3rd Gen Core processor Graphics Controller (rev 09)
01:00.0 VGA compatible controller: Advanced Micro Devices, Inc. [AMD/ATI] Wimbledon XT [Radeon HD 7970M] (rev ff)

Demo: http://www.pouet.net/prod.php?which=62853

Runs fine but slow on intel graphics, immediately crashes X on radeonsi. Other things run fine currently.

I don't see a backtrace written to Xorg.0.log which is weird. Later I'll maybe try to get a backtrace with gdb but this seems to be easily reproducable, so other people can try too.
Comment 1 Michel Dänzer 2014-04-24 07:32:39 UTC
Seems to work fine here with xserver Git.

If there's no backtrace in Xorg.0.log, take a look at the X server stderr output, which should be captured in a display manager log file if you're using one.
Comment 2 Christoph Haag 2014-04-24 07:49:54 UTC
Hm. This seems to be it:

X: ../include/privates.h:122: dixGetPrivateAddr: Assertion `key->initialized' failed.



X.Org X Server 1.15.1
Release Date: 2014-04-13
X Protocol Version 11, Revision 0
Build Operating System: Linux 3.14.0-4-ARCH x86_64 
Current Operating System: Linux c-l 3.15.0-1-mainline #1 SMP PREEMPT Mon Apr 21 01:47:32 CEST 2014 x86_64
Kernel command line: BOOT_IMAGE=/boot/vmlinuz-linux-mainline root=UUID=650b9f2f-d077-48e9-9fc2-7b6f2294599a rw
Build Date: 14 April 2014  08:39:09AM
 
Current version of pixman: 0.32.4
        Before reporting problems, check http://wiki.x.org
        to make sure that you have the latest version.
Markers: (--) probed, (**) from config file, (==) default setting,
        (++) from command line, (!!) notice, (II) informational,
        (WW) warning, (EE) error, (NI) not implemented, (??) unknown.
(==) Log file: "/var/log/Xorg.1.log", Time: Thu Apr 24 09:43:42 2014
(==) Using config directory: "/etc/X11/xorg.conf.d"
(==) Using system config directory "/usr/share/X11/xorg.conf.d"
Initializing built-in extension Generic Event Extension
Initializing built-in extension SHAPE
Initializing built-in extension MIT-SHM
Initializing built-in extension XInputExtension
Initializing built-in extension XTEST
Initializing built-in extension BIG-REQUESTS
Initializing built-in extension SYNC
Initializing built-in extension XKEYBOARD
Initializing built-in extension XC-MISC
Initializing built-in extension SECURITY
Initializing built-in extension XINERAMA
Initializing built-in extension XFIXES
Initializing built-in extension RENDER
Initializing built-in extension RANDR
Initializing built-in extension COMPOSITE
Initializing built-in extension DAMAGE
Initializing built-in extension MIT-SCREEN-SAVER
Initializing built-in extension DOUBLE-BUFFER
Initializing built-in extension RECORD
Initializing built-in extension DPMS
Initializing built-in extension Present
Initializing built-in extension DRI3
Initializing built-in extension X-Resource
Initializing built-in extension XVideo
Initializing built-in extension XVideo-MotionCompensation
Initializing built-in extension XFree86-VidModeExtension
Initializing built-in extension XFree86-DGA
Initializing built-in extension XFree86-DRI
Initializing built-in extension DRI2
Loading extension GLX
(II) [KMS] Kernel modesetting enabled.
The XKEYBOARD keymap compiler (xkbcomp) reports:
> Warning:          Type "ONE_LEVEL" has 1 levels, but <RALT> has 2 symbols
>                   Ignoring extra symbols
Errors from xkbcomp are not fatal to the X server
X: ../include/privates.h:122: dixGetPrivateAddr: Assertion `key->initialized' failed.
xterm: fatal IO error 11 (Die Ressource ist zur Zeit nicht verfügbar) or KillClient on X server ":1"
xinit: connection to X server lost
Comment 3 Christoph Haag 2014-04-24 08:05:34 UTC
Created attachment 97880 [details]
bt and bt full, but not complete debug symbols

Latest glamor and xf86-video-ati from git with debug symbols, but xorg server without debug symbols yet.
Comment 4 Christoph Haag 2014-04-24 08:31:49 UTC
Created attachment 97881 [details]
full backtrace

Ah, what the hell, here's a full backtrace. Doesn't give too much more information, but maybe it helps-
Comment 5 Michel Dänzer 2014-04-24 09:01:06 UTC
Created attachment 97883 [details] [review]
Handle PRIME for source drawable as well

Does this xf86-video-ati patch help?
Comment 6 Christoph Haag 2014-04-24 10:40:14 UTC
(In reply to comment #5)
> Created attachment 97883 [details] [review] [review]
> Handle PRIME for source drawable as well
> 
> Does this xf86-video-ati patch help?

Yes, with the patch it works fine.
Comment 7 Michel Dänzer 2014-04-28 08:40:12 UTC
commit c84230d686c078aac1dc98d82153f8b02521b2e1
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Fri Apr 25 09:17:51 2014 +0900

    dri2: Handle PRIME for source buffer as well in radeon_dri2_copy_region2


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.