dri2: Handle PRIME for source buffer as well in amdgpu_dri2_copy_region2

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=77810

(ported from radeon commit c84230d686c078aac1dc98d82153f8b02521b2e1)

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>