src/amdgpu_dri2.c
@@ -333,7 +333,14 @@ amdgpu_dri2_copy_region2(ScreenPtr pScreen,
 	dst_drawable = &dst_private->pixmap->drawable;
 
 	if (src_private->attachment == DRI2BufferFrontLeft) {
-		src_drawable = drawable;
+#ifdef USE_DRI2_PRIME
+		if (drawable->pScreen != pScreen) {
+			src_drawable = DRI2UpdatePrime(drawable, src_buffer);
+			if (!src_drawable)
+				return;
+		} else
+#endif
+			src_drawable = drawable;
 	}
 	if (dst_private->attachment == DRI2BufferFrontLeft) {
 #ifdef USE_DRI2_PRIME
